v1.0.0/modules/schema/pages/class/ErpInvoiceLineItem.adoc
= `ErpInvoiceLineItem`
:toclevels: 4


+++An individual line item on an invoice.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ErpInvoiceLineItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/ErpDocument.adoc[`ErpDocument`]
**** *`ErpInvoiceLineItem`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ErpInvoiceLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ErpPayableLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpPayment {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpRecLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpInvoiceLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UserAttribute {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpJournalEntry {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpInvoice {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpInvoiceLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpQuoteLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkBillingInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CustomerBillingInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ErpRecDelvLineItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




ErpInvoiceLineItem -> DateTimeInterval: billPeriod


ErpInvoiceLineItem -> ErpPayableLineItem: ErpPayableLineItem


ErpInvoiceLineItem -> ErpPayment: ErpPayments


ErpInvoiceLineItem -> ErpRecLineItem: ErpRecLineItem


ErpInvoiceLineItem -> ErpInvoiceLineItem: ContainerErpInvoiceLineItem


ErpInvoiceLineItem -> UserAttribute: UserAttributes


ErpInvoiceLineItem -> ErpJournalEntry: ErpJournalEntries


ErpInvoiceLineItem -> ErpInvoice: ErpInvoice


ErpInvoiceLineItem -> ErpInvoiceLineItem: ComponentErpInvoiceLineItems


ErpInvoiceLineItem -> ErpQuoteLineItem: ErpQuoteLineItem


ErpInvoiceLineItem -> WorkBillingInfo: WorkBillingInfos


ErpInvoiceLineItem -> CustomerBillingInfo: CustomerBillingInfos


ErpInvoiceLineItem -> ErpRecDelvLineItem: ErpRecDelvLineItem


ErpInvoiceLineItem -> Status: docStatus


ErpInvoiceLineItem -> ElectronicAddress: electronicAddress


ErpInvoiceLineItem -> Status: status


ErpInvoiceLineItem -> ActivityRecord: ActivityRecord


ErpInvoiceLineItem -> ConfigurationEvent: ConfigurationEvents


ErpInvoiceLineItem -> Author: Author


ErpInvoiceLineItem -> Editor: Editor


ErpInvoiceLineItem -> Approver: Approver


ErpInvoiceLineItem -> Issuer: Issuer


ErpInvoiceLineItem -> DiagramObject: DiagramObjects


ErpInvoiceLineItem -> InstanceSet: InstanceSet


ErpInvoiceLineItem -> Name: Names


ErpInvoiceLineItem -> ChangeSetMember: PropertiesCIMDataObject


ErpInvoiceLineItem -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ErpInvoice,`ErpInvoice`>>
| 1
| xref::class/ErpInvoice.adoc[`ErpInvoice`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ContainerErpInvoiceLineItem,`ContainerErpInvoiceLineItem`>>
| 0..1
| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]
| n/a

| <<ErpPayableLineItem,`ErpPayableLineItem`>>
| 0..1
| xref::class/ErpPayableLineItem.adoc[`ErpPayableLineItem`]
| n/a

| <<ErpQuoteLineItem,`ErpQuoteLineItem`>>
| 0..1
| xref::class/ErpQuoteLineItem.adoc[`ErpQuoteLineItem`]
| n/a

| <<ErpRecDelvLineItem,`ErpRecDelvLineItem`>>
| 0..1
| xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]
| n/a

| <<ErpRecLineItem,`ErpRecLineItem`>>
| 0..1
| xref::class/ErpRecLineItem.adoc[`ErpRecLineItem`]
| n/a

| <<billPeriod,`billPeriod`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Bill period for the line item.+++

| <<glAccount,`glAccount`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++General Ledger account code, must be a valid combination.+++

| <<glDateTime,`glDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time line item will be posted to the General Ledger.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/ErpInvoiceLineItemKind.adoc[`ErpInvoiceLineItemKind`]
| +++Kind of line item.+++

| <<lineAmount,`lineAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Amount due for this line item.+++

| <<lineNumber,`lineNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Line item number on invoice statement.+++

| <<lineVersion,`lineVersion`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Version number of the bill run.+++

| <<netAmount,`netAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Net line item charge amount.+++

| <<previousAmount,`previousAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Previous line item charge amount.+++

| <<ComponentErpInvoiceLineItems,`ComponentErpInvoiceLineItems`>>
| 0..*
| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]
| n/a

| <<CustomerBillingInfos,`CustomerBillingInfos`>>
| 0..*
| xref::class/CustomerBillingInfo.adoc[`CustomerBillingInfo`]
| +++Customer billing for services rendered.+++

| <<ErpJournalEntries,`ErpJournalEntries`>>
| 0..*
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]
| n/a

| <<ErpPayments,`ErpPayments`>>
| 0..*
| xref::class/ErpPayment.adoc[`ErpPayment`]
| n/a

| <<UserAttributes,`UserAttributes`>>
| 0..*
| xref::class/UserAttribute.adoc[`UserAttribute`]
| n/a

| <<WorkBillingInfos,`WorkBillingInfos`>>
| 0..*
| xref::class/WorkBillingInfo.adoc[`WorkBillingInfo`]
| n/a

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#billPeriod]
=== `billPeriod`
+++Bill period for the line item.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.billPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ComponentErpInvoiceLineItems]
=== `ComponentErpInvoiceLineItems`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ComponentErpInvoiceLineItems`
| Cardinality
| 0..*
| Type
| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ContainerErpInvoiceLineItem]
=== `ContainerErpInvoiceLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ContainerErpInvoiceLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#CustomerBillingInfos]
=== `CustomerBillingInfos`
+++Customer billing for services rendered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.CustomerBillingInfos`
| Cardinality
| 0..*
| Type
| xref::class/CustomerBillingInfo.adoc[`CustomerBillingInfo`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ErpInvoice]
=== `ErpInvoice`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpInvoice`
| Cardinality
| 1
| Type
| xref::class/ErpInvoice.adoc[`ErpInvoice`]


|===

//[discrete]
[#ErpJournalEntries]
=== `ErpJournalEntries`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpJournalEntries`
| Cardinality
| 0..*
| Type
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]


|===

//[discrete]
[#ErpPayableLineItem]
=== `ErpPayableLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpPayableLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpPayableLineItem.adoc[`ErpPayableLineItem`]


|===

//[discrete]
[#ErpPayments]
=== `ErpPayments`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpPayments`
| Cardinality
| 0..*
| Type
| xref::class/ErpPayment.adoc[`ErpPayment`]


|===

//[discrete]
[#ErpQuoteLineItem]
=== `ErpQuoteLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpQuoteLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpQuoteLineItem.adoc[`ErpQuoteLineItem`]


|===

//[discrete]
[#ErpRecDelvLineItem]
=== `ErpRecDelvLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpRecDelvLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]


|===

//[discrete]
[#ErpRecLineItem]
=== `ErpRecLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpRecLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpRecLineItem.adoc[`ErpRecLineItem`]


|===

//[discrete]
[#glAccount]
=== `glAccount`
+++General Ledger account code, must be a valid combination.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.glAccount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#glDateTime]
=== `glDateTime`
+++Date and time line item will be posted to the General Ledger.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.glDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#kind]
=== `kind`
+++Kind of line item.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/ErpInvoiceLineItemKind.adoc[`ErpInvoiceLineItemKind`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lineAmount]
=== `lineAmount`
+++Amount due for this line item.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.lineAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#lineNumber]
=== `lineNumber`
+++Line item number on invoice statement.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.lineNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#lineVersion]
=== `lineVersion`
+++Version number of the bill run.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.lineVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#netAmount]
=== `netAmount`
+++Net line item charge amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.netAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#previousAmount]
=== `previousAmount`
+++Previous line item charge amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.previousAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#UserAttributes]
=== `UserAttributes`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.UserAttributes`
| Cardinality
| 0..*
| Type
| xref::class/UserAttribute.adoc[`UserAttribute`]


|===

//[discrete]
[#WorkBillingInfos]
=== `WorkBillingInfos`


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.WorkBillingInfos`
| Cardinality
| 0..*
| Type
| xref::class/WorkBillingInfo.adoc[`WorkBillingInfo`]


|===


