v1.1.0/modules/schema/pages/class/ErpInvoiceLineItem.adoc
= `ErpInvoiceLineItem`
:toclevels: 4


+++An individual line item on an invoice.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ErpInvoiceLineItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/ErpDocument.adoc[`ErpDocument`]
**** *`ErpInvoiceLineItem`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ComponentErpInvoiceLineItems,`ComponentErpInvoiceLineItems`>>
//| [[slots_table.ComponentErpInvoiceLineItems]]<<ComponentErpInvoiceLineItems,`ComponentErpInvoiceLineItems`>>
| 0..* +
xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]
| _n/a_
| _n/a_

| <<ContainerErpInvoiceLineItem,`ContainerErpInvoiceLineItem`>>
//| [[slots_table.ContainerErpInvoiceLineItem]]<<ContainerErpInvoiceLineItem,`ContainerErpInvoiceLineItem`>>
| 0..1 +
xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]
| _n/a_
| _n/a_

| <<CustomerBillingInfos,`CustomerBillingInfos`>>
//| [[slots_table.CustomerBillingInfos]]<<CustomerBillingInfos,`CustomerBillingInfos`>>
| 0..* +
xref::class/CustomerBillingInfo.adoc[`CustomerBillingInfo`]
| +++Customer billing for services rendered.+++
| _n/a_

| <<ErpInvoice,`ErpInvoice`>>
//| [[slots_table.ErpInvoice]]<<ErpInvoice,`ErpInvoice`>>
| 1 +
xref::class/ErpInvoice.adoc[`ErpInvoice`]
| _n/a_
| _n/a_

| <<ErpJournalEntries,`ErpJournalEntries`>>
//| [[slots_table.ErpJournalEntries]]<<ErpJournalEntries,`ErpJournalEntries`>>
| 0..* +
xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]
| _n/a_
| _n/a_

| <<ErpPayableLineItem,`ErpPayableLineItem`>>
//| [[slots_table.ErpPayableLineItem]]<<ErpPayableLineItem,`ErpPayableLineItem`>>
| 0..1 +
xref::class/ErpPayableLineItem.adoc[`ErpPayableLineItem`]
| _n/a_
| _n/a_

| <<ErpPayments,`ErpPayments`>>
//| [[slots_table.ErpPayments]]<<ErpPayments,`ErpPayments`>>
| 0..* +
xref::class/ErpPayment.adoc[`ErpPayment`]
| _n/a_
| _n/a_

| <<ErpQuoteLineItem,`ErpQuoteLineItem`>>
//| [[slots_table.ErpQuoteLineItem]]<<ErpQuoteLineItem,`ErpQuoteLineItem`>>
| 0..1 +
xref::class/ErpQuoteLineItem.adoc[`ErpQuoteLineItem`]
| _n/a_
| _n/a_

| <<ErpRecDelvLineItem,`ErpRecDelvLineItem`>>
//| [[slots_table.ErpRecDelvLineItem]]<<ErpRecDelvLineItem,`ErpRecDelvLineItem`>>
| 0..1 +
xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]
| _n/a_
| _n/a_

| <<ErpRecLineItem,`ErpRecLineItem`>>
//| [[slots_table.ErpRecLineItem]]<<ErpRecLineItem,`ErpRecLineItem`>>
| 0..1 +
xref::class/ErpRecLineItem.adoc[`ErpRecLineItem`]
| _n/a_
| _n/a_

| <<UserAttributes,`UserAttributes`>>
//| [[slots_table.UserAttributes]]<<UserAttributes,`UserAttributes`>>
| 0..* +
xref::class/UserAttribute.adoc[`UserAttribute`]
| _n/a_
| _n/a_

| <<WorkBillingInfos,`WorkBillingInfos`>>
//| [[slots_table.WorkBillingInfos]]<<WorkBillingInfos,`WorkBillingInfos`>>
| 0..* +
xref::class/WorkBillingInfo.adoc[`WorkBillingInfo`]
| _n/a_
| _n/a_

| <<billPeriod,`billPeriod`>>
//| [[slots_table.billPeriod]]<<billPeriod,`billPeriod`>>
| 0..1 +
xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Bill period for the line item.+++
| _n/a_

| <<glAccount,`glAccount`>>
//| [[slots_table.glAccount]]<<glAccount,`glAccount`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++General Ledger account code, must be a valid combination.+++
| _n/a_

| <<glDateTime,`glDateTime`>>
//| [[slots_table.glDateTime]]<<glDateTime,`glDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time line item will be posted to the General Ledger.+++
| _n/a_

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/ErpInvoiceLineItemKind.adoc[`ErpInvoiceLineItemKind`]
| +++Kind of line item.+++
| _n/a_

| <<lineAmount,`lineAmount`>>
//| [[slots_table.lineAmount]]<<lineAmount,`lineAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Amount due for this line item.+++
| _n/a_

| <<lineNumber,`lineNumber`>>
//| [[slots_table.lineNumber]]<<lineNumber,`lineNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Line item number on invoice statement.+++
| _n/a_

| <<lineVersion,`lineVersion`>>
//| [[slots_table.lineVersion]]<<lineVersion,`lineVersion`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Version number of the bill run.+++
| _n/a_

| <<netAmount,`netAmount`>>
//| [[slots_table.netAmount]]<<netAmount,`netAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Net line item charge amount.+++
| _n/a_

| <<previousAmount,`previousAmount`>>
//| [[slots_table.previousAmount]]<<previousAmount,`previousAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Previous line item charge amount.+++
| _n/a_

| <<ActivityRecord,`ActivityRecord`>>
//| [[slots_table.ActivityRecord]]<<ActivityRecord,`ActivityRecord`>>
| 0..* +
xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++
| xref::class/Document.adoc[`Document`]

| <<Approver,`Approver`>>
//| [[slots_table.Approver]]<<Approver,`Approver`>>
| 0..1 +
xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Author,`Author`>>
//| [[slots_table.Author]]<<Author,`Author`>>
| 0..1 +
xref::class/Author.adoc[`Author`]
| +++Author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++
| xref::class/Document.adoc[`Document`]

| <<Editor,`Editor`>>
//| [[slots_table.Editor]]<<Editor,`Editor`>>
| 0..1 +
xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Issuer,`Issuer`>>
//| [[slots_table.Issuer]]<<Issuer,`Issuer`>>
| 0..1 +
xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++
| xref::class/Document.adoc[`Document`]

| <<authorName,`authorName`>>
//| [[slots_table.authorName]]<<authorName,`authorName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<comment,`comment`>>
//| [[slots_table.comment]]<<comment,`comment`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++
| xref::class/Document.adoc[`Document`]

| <<createdDateTime,`createdDateTime`>>
//| [[slots_table.createdDateTime]]<<createdDateTime,`createdDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++
| xref::class/Document.adoc[`Document`]

| <<docStatus,`docStatus`>>
//| [[slots_table.docStatus]]<<docStatus,`docStatus`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status'...+++
| xref::class/Document.adoc[`Document`]

| <<electronicAddress,`electronicAddress`>>
//| [[slots_table.electronicAddress]]<<electronicAddress,`electronicAddress`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++
| xref::class/Document.adoc[`Document`]

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
//| [[slots_table.lastModifiedDateTime]]<<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++
| xref::class/Document.adoc[`Document`]

| <<revisionNumber,`revisionNumber`>>
//| [[slots_table.revisionNumber]]<<revisionNumber,`revisionNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++
| xref::class/Document.adoc[`Document`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use...+++
| xref::class/Document.adoc[`Document`]

| <<subject,`subject`>>
//| [[slots_table.subject]]<<subject,`subject`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document subject.+++
| xref::class/Document.adoc[`Document`]

| <<title,`title`>>
//| [[slots_table.title]]<<title,`title`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document title.+++
| xref::class/Document.adoc[`Document`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems...+++
| xref::class/Document.adoc[`Document`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ActivityRecord,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Approver,&#10548;>>
--
////


//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Author,&#10548;>>
--
////


//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.authorName,&#10548;>>
--
////


//[discrete]
[#billPeriod]
=== `billPeriod`
+++Bill period for the line item.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.billPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

////
[.text-left]
--
<<slots_table.billPeriod,&#10548;>>
--
////


//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.comment,&#10548;>>
--
////


//[discrete]
[#ComponentErpInvoiceLineItems]
=== `ComponentErpInvoiceLineItems`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ComponentErpInvoiceLineItems`
| Cardinality
| 0..*
| Type
| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]


|===

////
[.text-left]
--
<<slots_table.ComponentErpInvoiceLineItems,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#ContainerErpInvoiceLineItem]
=== `ContainerErpInvoiceLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ContainerErpInvoiceLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`]


|===

////
[.text-left]
--
<<slots_table.ContainerErpInvoiceLineItem,&#10548;>>
--
////


//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.createdDateTime,&#10548;>>
--
////


//[discrete]
[#CustomerBillingInfos]
=== `CustomerBillingInfos`
+++Customer billing for services rendered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.CustomerBillingInfos`
| Cardinality
| 0..*
| Type
| xref::class/CustomerBillingInfo.adoc[`CustomerBillingInfo`]


|===

////
[.text-left]
--
<<slots_table.CustomerBillingInfos,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.docStatus,&#10548;>>
--
////


//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Editor,&#10548;>>
--
////


//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.electronicAddress,&#10548;>>
--
////


//[discrete]
[#ErpInvoice]
=== `ErpInvoice`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpInvoice`
| Cardinality
| 1
| Type
| xref::class/ErpInvoice.adoc[`ErpInvoice`]


|===

////
[.text-left]
--
<<slots_table.ErpInvoice,&#10548;>>
--
////


//[discrete]
[#ErpJournalEntries]
=== `ErpJournalEntries`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpJournalEntries`
| Cardinality
| 0..*
| Type
| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`]


|===

////
[.text-left]
--
<<slots_table.ErpJournalEntries,&#10548;>>
--
////


//[discrete]
[#ErpPayableLineItem]
=== `ErpPayableLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpPayableLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpPayableLineItem.adoc[`ErpPayableLineItem`]


|===

////
[.text-left]
--
<<slots_table.ErpPayableLineItem,&#10548;>>
--
////


//[discrete]
[#ErpPayments]
=== `ErpPayments`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpPayments`
| Cardinality
| 0..*
| Type
| xref::class/ErpPayment.adoc[`ErpPayment`]


|===

////
[.text-left]
--
<<slots_table.ErpPayments,&#10548;>>
--
////


//[discrete]
[#ErpQuoteLineItem]
=== `ErpQuoteLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpQuoteLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpQuoteLineItem.adoc[`ErpQuoteLineItem`]


|===

////
[.text-left]
--
<<slots_table.ErpQuoteLineItem,&#10548;>>
--
////


//[discrete]
[#ErpRecDelvLineItem]
=== `ErpRecDelvLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpRecDelvLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`]


|===

////
[.text-left]
--
<<slots_table.ErpRecDelvLineItem,&#10548;>>
--
////


//[discrete]
[#ErpRecLineItem]
=== `ErpRecLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.ErpRecLineItem`
| Cardinality
| 0..1
| Type
| xref::class/ErpRecLineItem.adoc[`ErpRecLineItem`]


|===

////
[.text-left]
--
<<slots_table.ErpRecLineItem,&#10548;>>
--
////


//[discrete]
[#glAccount]
=== `glAccount`
+++General Ledger account code, must be a valid combination.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.glAccount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.glAccount,&#10548;>>
--
////


//[discrete]
[#glDateTime]
=== `glDateTime`
+++Date and time line item will be posted to the General Ledger.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.glDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.glDateTime,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Issuer,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++Kind of line item.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/ErpInvoiceLineItemKind.adoc[`ErpInvoiceLineItemKind`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.lastModifiedDateTime,&#10548;>>
--
////


//[discrete]
[#lineAmount]
=== `lineAmount`
+++Amount due for this line item.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.lineAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.lineAmount,&#10548;>>
--
////


//[discrete]
[#lineNumber]
=== `lineNumber`
+++Line item number on invoice statement.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.lineNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.lineNumber,&#10548;>>
--
////


//[discrete]
[#lineVersion]
=== `lineVersion`
+++Version number of the bill run.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.lineVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.lineVersion,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#netAmount]
=== `netAmount`
+++Net line item charge amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.netAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.netAmount,&#10548;>>
--
////


//[discrete]
[#previousAmount]
=== `previousAmount`
+++Previous line item charge amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.previousAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.previousAmount,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.revisionNumber,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#subject]
=== `subject`
+++Document subject.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.subject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#title]
=== `title`
+++Document title.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.title,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////


//[discrete]
[#UserAttributes]
=== `UserAttributes`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.UserAttributes`
| Cardinality
| 0..*
| Type
| xref::class/UserAttribute.adoc[`UserAttribute`]


|===

////
[.text-left]
--
<<slots_table.UserAttributes,&#10548;>>
--
////


//[discrete]
[#WorkBillingInfos]
=== `WorkBillingInfos`



[cols="h,4",width=65%]
|===
| URI
| `cim:ErpInvoiceLineItem.WorkBillingInfos`
| Cardinality
| 0..*
| Type
| xref::class/WorkBillingInfo.adoc[`WorkBillingInfo`]


|===

////
[.text-left]
--
<<slots_table.WorkBillingInfos,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CustomerBillingInfo.adoc[`CustomerBillingInfo`] | xref::class/CustomerBillingInfo.adoc#ErpInvoiceLineItems[`ErpInvoiceLineItems`]



| xref::class/ErpInvoice.adoc[`ErpInvoice`] | xref::class/ErpInvoice.adoc#ErpInvoiceLineItems[`ErpInvoiceLineItems`]



| xref::class/ErpInvoiceLineItem.adoc[`ErpInvoiceLineItem`] | xref::class/ErpInvoiceLineItem.adoc#ComponentErpInvoiceLineItems[`ComponentErpInvoiceLineItems`]



| xref::class/ErpJournalEntry.adoc[`ErpJournalEntry`] | xref::class/ErpJournalEntry.adoc#ErpInvoiceLineItem[`ErpInvoiceLineItem`]



| xref::class/ErpPayableLineItem.adoc[`ErpPayableLineItem`] | xref::class/ErpPayableLineItem.adoc#ErpInvoiceLineItem[`ErpInvoiceLineItem`]



| xref::class/ErpPayment.adoc[`ErpPayment`] | xref::class/ErpPayment.adoc#ErpInvoiceLineItems[`ErpInvoiceLineItems`]



| xref::class/ErpQuoteLineItem.adoc[`ErpQuoteLineItem`] | xref::class/ErpQuoteLineItem.adoc#ErpInvoiceLineItem[`ErpInvoiceLineItem`]



| xref::class/ErpRecDelvLineItem.adoc[`ErpRecDelvLineItem`] | xref::class/ErpRecDelvLineItem.adoc#ErpInvoiceLineItem[`ErpInvoiceLineItem`]



| xref::class/ErpRecLineItem.adoc[`ErpRecLineItem`] | xref::class/ErpRecLineItem.adoc#ErpInvoiceLineItem[`ErpInvoiceLineItem`]



| xref::class/UserAttribute.adoc[`UserAttribute`] | xref::class/UserAttribute.adoc#ErpInvoiceLineItems[`ErpInvoiceLineItems`]



| xref::class/WorkBillingInfo.adoc[`WorkBillingInfo`] | xref::class/WorkBillingInfo.adoc#ErpLineItems[`ErpLineItems`]


|===

